[package]
name = "kube-conf"
version = "0.2.1-alpha.0"
authors = ["Espen Henriksen <dev+kubeconf@henriksen.is>"]
edition = "2018"
description = "Easily fetch the user's local Kubernetes config file"
license = "MIT"
documentation = "https://docs.rs/kube-conf"
homepage = "https://github.com/esphen/kube-conf"
repository = "https://github.com/esphen/kube-conf"
keywords = ["kubernetes", "config", "yaml", "k8s", "kube"]
categories = ["config", "filesystem"]

[package.metadata.release]
sign-commit = true
upload-doc = true
pre-release-replacements = [ {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"}, {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"} ]

[dependencies]
error-chain = "0.12.0"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_yaml = "0.8.8"

[badges]
travis-ci = { repository = "esphen/kube-conf" }
